--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="second_name">second name</string>
     <string name="creat_account">creat account</string>
     <string name="forget_password">forget password?</string>
+    <string name="create_account">create_account</string>
 </resources>
