--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="starte">★</string>
     <string name="remove">remove</string>
     <string name="change">change</string>
+    <string name="tasks_group">tasks_group</string>
 </resources>
