enough functionalities for v1 / next step design inxaalah

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="change">change</string>
     <string name="tasks_group">tasks_group</string>
     <string name="add_task">add task</string>
+    <string name="task_notes">Task Notes</string>
 </resources>
