--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,7 @@
     <string name="tasks_group">tasks_group</string>
     <string name="add_task">add task</string>
     <string name="task_notes">Task Notes</string>
+    <string name="add_new_task">Add New Task</string>
+    <string name="mark_as_done">Mark as Done</string>
+    <string name="contact_support">contact support</string>
 </resources>
